delete pic when user delete product and update product

--- a/app/views/admin/product_management/index.jade
+++ b/app/views/admin/product_management/index.jade
@@ -23,7 +23,7 @@ block content
             tr.j-productItem
               td
                 .imgbox
-                  img(src="#{product.pics}")
+                  img(src="#{product.pics[0]}")
               td
                 a(href='admin/product/#{product._id}') #{product.name}
               td
