--- a/app/views/adminLayout.jade
+++ b/app/views/adminLayout.jade
@@ -25,6 +25,8 @@ html
             a(href="/admin/user/list") 用户列表
           li#category
             a(href="/admin/category") 商品分类
+          li#category
+            a(href="/admin/activity") 活动
       .main
         block content
     include ./includes/admin-footer
