--- a/app/views/admin/activity/index.jade
+++ b/app/views/admin/activity/index.jade
@@ -6,7 +6,7 @@ block content
     .productlist.section
       .head
         h3 商品活动（共件）
-        a.newpdt(href="javascript:void(0);",data-toggle="modal",data-target="#new")
+        a.newpdt(href="/admin/activity/detail")
           i.fa.fa-plus
           | 添加活动
       table
