--- a/public/less/admin.less
+++ b/public/less/admin.less
@@ -2,7 +2,9 @@
 @import 'mixin.less';
 @import 'reset.less';
 @import './pc/public_admin.less';
+/* 组件样式 */
 @import './pc/form.less';
+@import './pc/select.less';
 
 @import './pc/login.less';
 
@@ -12,3 +14,5 @@
 @import './pc/new-product.less';
 @import './pc/userlist.less';
 @import './pc/edit_product.less';
+
+@import './pc/new_act.less';
