--- a/public/less/pc/public_admin.less
+++ b/public/less/pc/public_admin.less
@@ -8,6 +8,11 @@ body{
   background-color: #eceff2;
   font-family: 'Microsoft YaHei',sans-serif;
 }
+
+.show{
+  display: block !important;
+}
+
 header{
   width: 100%;
   height: 70px;
