--- a/public/style/admin.css
+++ b/public/style/admin.css
@@ -65,6 +65,9 @@ body {
   background-color: #eceff2;
   font-family: 'Microsoft YaHei', sans-serif;
 }
+.show {
+  display: block !important;
+}
 header {
   width: 100%;
   height: 70px;
@@ -279,6 +282,7 @@ header .user .logout:hover {
   border-color: #a9a9a9;
   color: #a9a9a9;
 }
+/* 组件样式 */
 .form-group {
   min-height: 32px;
   line-height: 32px;
@@ -406,6 +410,22 @@ header .user .logout:hover {
   top: 0;
   white-space: nowrap;
   line-height: 32px;
+}
+.select {
+  display: inline-block;
+  position: relative;
+}
+.select .dropdown-toggle {
+  border: 1px solid #ccc;
+  padding: 6px 12px;
+  background: #fff;
+  border-radius: 3px;
+  min-width: 94px;
+}
+.select .dropdown-menu {
+  position: absolute;
+  top: 100%;
+  display: none;
 }
 html,
 body {
@@ -652,4 +672,25 @@ body {
 .edit-page .labels.selected {
   border-color: #709ef9;
   color: #709ef9;
+}
+.new_act .select {
+  margin: 0 20px;
+}
+.new_act .seach {
+  width: 158px;
+  height: 34px;
+  border: 1px solid #ccc;
+  outline: none;
+}
+.new_act .submit {
+  color: #fff;
+  display: inline-block;
+  border-radius: 3px;
+  padding: 6px 12px;
+  background: #3385ff;
+  margin-left: 10px;
+  cursor: pointer;
+}
+.new_act .submit:hover {
+  text-decoration: none;
 }
