--- a/public/style/pc/public_admin.css
+++ b/public/style/pc/public_admin.css
@@ -7,6 +7,9 @@ body {
   background-color: #eceff2;
   font-family: 'Microsoft YaHei', sans-serif;
 }
+.show {
+  display: block !important;
+}
 header {
   width: 100%;
   height: 70px;
