--- a/public/less/pc/new_act.less
+++ b/public/less/pc/new_act.less
@@ -7,6 +7,8 @@
     height: 34px;
     border: 1px solid #ccc;
     outline: none;
+    border-radius: 3px;
+    padding: 5px 10px;
   }
   .submit{
     color: #fff;
@@ -19,5 +21,8 @@
     &:hover{
       text-decoration: none;
     }
+  }
+  .pagenate_bar .pagination{
+    float: right;
   }
 }
