--- a/public/less/pc/public_admin.less
+++ b/public/less/pc/public_admin.less
@@ -12,6 +12,15 @@ body{
 .show{
   display: block !important;
 }
+.hide{
+  display: none !important;
+}
+.clearfix{
+  .clearfix();
+}
+.right{
+  float: right;
+}
 
 header{
   width: 100%;
