--- a/public/style/admin.css
+++ b/public/style/admin.css
@@ -68,6 +68,20 @@ body {
 .show {
   display: block !important;
 }
+.hide {
+  display: none !important;
+}
+.clearfix:after {
+  content: " ";
+  display: block;
+  clear: both;
+  height: 0;
+  font-size: 0;
+  visibility: hidden;
+}
+.right {
+  float: right;
+}
 header {
   width: 100%;
   height: 70px;
@@ -127,6 +141,14 @@ header .user .logout:hover {
   font-size: 0;
   visibility: hidden;
 }
+.container:after {
+  content: " ";
+  display: block;
+  clear: both;
+  height: 0;
+  font-size: 0;
+  visibility: hidden;
+}
 .container .sidebar {
   width: 210px;
   background: #fff;
@@ -162,6 +184,14 @@ header .user .logout:hover {
 .container .main {
   background: #fff;
   margin-left: 210px;
+}
+.container .main:after {
+  content: " ";
+  display: block;
+  clear: both;
+  height: 0;
+  font-size: 0;
+  visibility: hidden;
 }
 .container .main:after {
   content: " ";
@@ -681,6 +711,8 @@ body {
   height: 34px;
   border: 1px solid #ccc;
   outline: none;
+  border-radius: 3px;
+  padding: 5px 10px;
 }
 .new_act .submit {
   color: #fff;
@@ -693,4 +725,7 @@ body {
 }
 .new_act .submit:hover {
   text-decoration: none;
+}
+.new_act .pagenate_bar .pagination {
+  float: right;
 }
