--- a/app/views/adminLayout.jade
+++ b/app/views/adminLayout.jade
@@ -7,6 +7,7 @@ html
     link(rel="stylesheet",href="/style/bootstrap.min.css")
     link(rel="stylesheet",href="/style/font-awesome.min.css")
     link(rel="stylesheet",href="/style/admin.css")
+    block style
   body
     header
       .inner
