--- a/app/views/includes/header.jade
+++ b/app/views/includes/header.jade
@@ -1,8 +1,7 @@
 header.bar.bar-nav.j-bar
-  span.logo
-    img(src="images/wap_logo.png")
+  a.logo.fa.fa-user-o
   form#search_form
     .search
       input.open-popup(type="text",name="keywords",placeholder="请输入搜索关键字：")
       a.fa.fa-search.search-btn(href="javascript:;")
-  span.fa.fa-list-ul.badget.open-panel(data-panel="#subfield-panel")
+  a.fa.fa-shopping-cart.badget(href="/cart")
