--- a/app/views/mobile/home/index.jade
+++ b/app/views/mobile/home/index.jade
@@ -32,26 +32,12 @@ block content
           .wipe_img_con
             a.swiper_wrap_a(href="/activity/#{acts[0]._id}")
               img(src="#{acts[0].pic}")
-      .user-nav
-        ul.row
-          li.col-25
-            a(href="")
-              img(src="")
-              p 我
-          li.col-25
-            a(href="")
-              img(src="")
-              p 我的订单
-          li.col-25
-            a(href="")
-              img(src="")
-              p 我的收藏
-          li.col-25
-            //- if auth_url
-            //-   a.external(href="#{auth_url}")
-            //-     img(src="")
-            //-     p 购物车
-            //- else
+          //- li.col-25
+            if auth_url
+              a.external(href="#{auth_url}")
+                img(src="")
+                p 购物车
+            else
             a.external(href="/cart")
               img(src="")
               p 购物车
