--- a/public/less/mobile/header.less
+++ b/public/less/mobile/header.less
@@ -1,38 +1,33 @@
 @import '../variable.less';
 @import '../mixin.less';
 header.bar.bar-nav{
+  font-size: 1rem;
   height: 2.1rem;
   padding: 0;
   background: rgba(0,0,0,.4);
   .logo{
+    color: #fff;
     display: inline-block;
     width: 3rem;
     height: 2.1rem;
     line-height: 2.1rem;
     float: left;
-    color: #fff;
-    text-align: right;
+    text-align: center;
     overflow: hidden;
-    img{
-      width: 2.45rem;
-      height: auto;
-      vertical-align: middle;
-    }
   }
   .badget{
+    color: #fff;
     display: inline-block;
     width: 2.4rem;
     height: 100%;
-    font-size: 1rem;
     line-height: 2.1rem;
     float: right;
     text-align: center;
-    color: #fff;
   }
   form{
     position:absolute;
     top: 0;
-    left: 3.5rem;
+    left: 3rem;
     right: 2.45rem;
     height: 100%;
     line-height: 2.1rem;
