--- a/public/style/global.css
+++ b/public/style/global.css
@@ -200,39 +200,34 @@ input[type=radio] {
   display: none !important;
 }
 header.bar.bar-nav {
+  font-size: 1rem;
   height: 2.1rem;
   padding: 0;
   background: rgba(0, 0, 0, 0.4);
 }
 header.bar.bar-nav .logo {
+  color: #fff;
   display: inline-block;
   width: 3rem;
   height: 2.1rem;
   line-height: 2.1rem;
   float: left;
-  color: #fff;
-  text-align: right;
+  text-align: center;
   overflow: hidden;
 }
-header.bar.bar-nav .logo img {
-  width: 2.45rem;
-  height: auto;
-  vertical-align: middle;
-}
 header.bar.bar-nav .badget {
+  color: #fff;
   display: inline-block;
   width: 2.4rem;
   height: 100%;
-  font-size: 1rem;
   line-height: 2.1rem;
   float: right;
   text-align: center;
-  color: #fff;
 }
 header.bar.bar-nav form {
   position: absolute;
   top: 0;
-  left: 3.5rem;
+  left: 3rem;
   right: 2.45rem;
   height: 100%;
   line-height: 2.1rem;
