--- a/public/less/mobile/order.less
+++ b/public/less/mobile/order.less
@@ -1,6 +1,7 @@
 /* creat_order list */
 .create_order{
   .address{
+    background: #fff;
     display: -webkit-box;
     display: box;
     height: 2rem;
@@ -13,6 +14,12 @@
     }
     .location_icon,.edit_addr{
       width: 0.8rem;
+      line-height: 2rem;
+    }
+    .open-popup{
+      display: block;
+      width: 100%;
+      height: 2rem;
       line-height: 2rem;
     }
   }
