--- a/public/style/global.css
+++ b/public/style/global.css
@@ -977,6 +977,7 @@ header.bar.bar-nav form .search-btn {
 }
 /* creat_order list */
 .create_order .address {
+  background: #fff;
   display: -webkit-box;
   display: box;
   height: 2rem;
@@ -991,6 +992,12 @@ header.bar.bar-nav form .search-btn {
 .create_order .address .location_icon,
 .create_order .address .edit_addr {
   width: 0.8rem;
+  line-height: 2rem;
+}
+.create_order .address .open-popup {
+  display: block;
+  width: 100%;
+  height: 2rem;
   line-height: 2rem;
 }
 .create_order .ui-list {
@@ -1041,4 +1048,37 @@ header.bar.bar-nav form .search-btn {
 }
 .create_order .footer .pieces_count {
   line-height: 1;
+}
+.popup-address .footer {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  border-top: 1px solid #ccc;
+  height: 2rem;
+  background: #fafafa;
+}
+.popup-address .footer .new_address {
+  color: #fff;
+  text-align: center;
+  display: block;
+  width: 6rem;
+  height: 1.5rem;
+  line-height: 1.5rem;
+  border-radius: 0.75rem;
+  background: #fe406e;
+  margin: 0.25rem auto 0;
+}
+.popup-new .header .title,
+.popup-address .header .title {
+  margin: auto;
+  position: static;
+}
+.popup-new .content-block,
+.popup-address .content-block {
+  margin: 2.1rem 0;
+}
+.popup-new .save {
+  font-size: 0.7rem;
+  width: 2rem;
+  margin-right: 0.5rem;
 }
