--- a/public/less/mobile/order.less
+++ b/public/less/mobile/order.less
@@ -2,12 +2,13 @@
 .create_order{
   .address{
     background: #fff;
+  }
+  .inner{
     display: -webkit-box;
     display: box;
     height: 2rem;
-    padding: 0.5rem 0.2rem;
+    padding: 0.5rem;
     box-sizing: content-box;
-    margin-bottom: 0.5rem;
     .addr_detail{
       -webkit-box-flex:1;
       box-flex: 1;
