--- a/public/style/mobile/public.css
+++ b/public/style/mobile/public.css
@@ -29,6 +29,9 @@ body.with-panel-right-reveal .page {
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+.hide {
+  display: none !important;
+}
 .content {
   overflow-x: hidden;
 }
