--- a/app/views/mobile/order/_edit_address.jade
+++ b/app/views/mobile/order/_edit_address.jade
@@ -3,16 +3,23 @@
     a.arr.close-popup(href="javascript:void(0);",data-popup=".popup-address")
       i.fa.fa-angle-left
     h1.title 地址管理
+    span.title_right.j-edit 编辑
+    span.title_right.hide.j-save 完成
   .content-block
-    ul
-      li.address
-        .addr_detail
-          input(type="hidden",name="order[address]",value="")
-          .contact
-            em.default 默认
-            | 收货人：** &nbsp;&nbsp;&nbsp;188888888
-          .detail 广东省-广州市-***
-        .edit_addr
+    ul.j-addr_list
+      li.address.default
+        .inner
+          .addr_detail
+            input(type="hidden",name="order[address]",value="")
+            .contact
+              em.default-label 默认
+              | 收货人：** &nbsp;&nbsp;&nbsp;188888888
+            .detail 广东省-广州市-***
+          .edit_addr
+            input.hide.ui-checkbox.j-product(type="radio",value="",checked)
+            i.fa.fa-pencil-square-o
+        .edit_default
           input.ui-checkbox.j-product(type="checkbox",value="",checked)
+          label 设为默认地址
   .footer.cart-counter
     a.new_address.open-popup(href="javascript:;",data-popup=".popup-new") 新增地址
