--- a/app/views/mobile/order/create_order.jade
+++ b/app/views/mobile/order/create_order.jade
@@ -8,16 +8,17 @@ block content
       h1.title 购物车
     .content.native-scroll
       from#order(action="",method="POST")
-        input(type="hidden",name="order[user_id]",value="#{user_id}")
+        input#userid(type="hidden",name="order[user_id]",value="#{user_id}")
         .address
-          .location_icon
-            i.fa.fa-map-marker
-          .addr_detail
-            input(type="hidden",name="order[address]",value="")
-            .contact 收货人：** &nbsp;&nbsp;&nbsp;188888888
-            .detail 广东省-广州市-***
-          .edit_addr
-            a.fa.fa-angle-right.open-popup(href="javascript:;",data-popup=".popup-address")
+          .inner
+            .location_icon
+              i.fa.fa-map-marker
+            .addr_detail
+              input(type="hidden",name="order[address]",value="")
+              .contact 收货人：** &nbsp;&nbsp;&nbsp;188888888
+              .detail 广东省-广州市-***
+            .edit_addr
+              a.fa.fa-angle-right.open-popup(href="javascript:;",data-popup=".popup-address")
         .product
           ul.ui-list
             each product in products
