--- a/public/less/mobile/address_list.less
+++ b/public/less/mobile/address_list.less
@@ -1,11 +1,25 @@
 .popup-address{
+  background: #f5f5f5;
+  .content-block{
+    padding: 0;
+  }
+  .edit_default{
+    height: 1rem;
+    padding: 0.5rem;
+    box-sizing: content-box;
+    border-top: 1px solid #e6e6e6;
+    margin-bottom: 0.5rem;
+  }
+  .header.bar.bar-nav{
+    background: #fff;
+  }
   .footer{
     width: 100%;
     position: absolute;
     bottom: 0;
     border-top: 1px solid #ccc;
     height: 2rem;
-    background: #fafafa;
+    background: #fff;
     .new_address{
       color: #fff;
       text-align: center;
@@ -29,12 +43,13 @@
   .content-block{
     margin: 2.1rem 0;
   }
+  .title_right{
+    font-size: 0.7rem;
+    width: 2rem;
+    line-height: 2rem;
+    margin-right: 0.5rem;
+  }
 }
 
 .popup-new{
-  .save{
-    font-size: 0.7rem;
-    width: 2rem;
-    margin-right: 0.5rem;
-  }
 }
